hover text added

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/style.css">
 </head>
 <body>
+    <h2>Hover Me</h2>
     <span id="emoji-btn">😀</span>
     <script src="/app.js"></script>
 </body>
